# Logger

./: CMakeLists.txt
Enumeration/: CMakeLists.txt
Enumeration/include/Enumeration/: CMakeLists.txt  Enumeration.hpp  types.hpp
Enumeration/include/Enumeration/details/: CMakeLists.txt  Enum.hpp  EnumValue.hpp  Enumeration.hpp
Enumeration/source/Enumeration/: Enumeration.cpp
Logger/: CMakeLists.txt
Logger/include/Logger/: Logger.hpp  LoggerProperties.hpp  types.hpp
Logger/source/Logger/: Logger.cpp
examples/: CMakeLists.txt  main.cpp
